$Id$

2016-03-30  Christian Franke  <franke@computer.org>

	Makefile.am: Add man page support for --with-nvme-devicescan.
	smartd.8.in: Document NVMe DEVICESCAN for Linux.

	configure.ac: Use `...` instead of $(...) due to possible parsing
	problems since r4260.  Remove workaround for related bash bug.

2016-03-28  Christian Franke  <franke@computer.org>

	Add NVMe DEVICESCAN support for Linux:
	configure.ac: Add --with-nvme-devicescan option.
	os_linux.cpp: Scan for '/dev/nvme[0-99]' if '-d nvme' is specified
	or --with-nvme-devicescan is set.
	smartctl.cpp: Add "NVMe" to --scan info.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe
	sections also for FreeBSD.

	configure.ac: Write configuration summary also to config.log.

2016-03-28  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: Add initial FreeBSD NVMe support (ticket #657)

2016-03-27  Christian Franke  <franke@computer.org>

	ataprint.cpp: Support POWER MODE values introduced in ATA ACS-2
	(ticket #184, smartctl only).

2016-03-27  Thomas Gatterweh  <thomas_gatterweh@hotmail.com>

	atacmds.cpp, smartd.cpp: Support POWER MODE values introduced
	in ATA ACS-2 (ticket #184, smartd only).

2016-03-26  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rearrange code such that no forward declarations
	are needed.

	os_freebsd.cpp, os_netbsd.cpp, os_openbsd.cpp, os_solaris.cpp,
	utility.cpp: Remove variable 'bytes'.  Only used for a memory
	leak check which was removed in r2629 (2008-08-29).

	os_solaris.cpp, utility.cpp, utility.h:
	Remove CustomStrDup(), use strdup() instead.

	dev_legacy.cpp, utility.cpp, utility.h:
	Remove FreeNonZero(), use free() instead.

	smartctl.cpp, smartd.cpp, utility.cpp, utility.h:
	Remove split_report_arg(), use sscanf() instead.

	Add basic NVMe support for smartd (-H -l error -W):
	Makefile.am, os_win32/vc10/smartd.vcxproj: Add nvmecmds.cpp to smartd.
	smartd.cpp: Add NVMeDeviceScan() and NVMeCheckDevice().